--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <modules>
   	<module>cohort-web</module>
   	<module>cohort-business</module>
-  
+  	<module>cohort-model</module>
   	<module>cohort-ws</module>
   </modules>
   
